fix error in example config

--- a/example.toml
+++ b/example.toml
@@ -1,2 +1,2 @@
 [rainbow_six_siege]
-kill = {method = "pixel" options = {location = [], color = "#ffffff"}}
+kill = {method = "pixel", options = {location = [], color = "#ffffff"}}
